<resources>
    <string name="app_name">PRODRATER</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registro">¿Non tes conta? Rexístrate aquí</string>
    <string name="subir">Subir a miña reseña</string>
    <string name="modificarNome">Modificar nome</string>
    <string name="buscarNome">Introduza o seu nome de usuario para poder cambiar a contrasinal</string>ç
    <string name="atopado">Usuario atopado. Por favor, introduza o novo contrasinal</string>
    <string name="cambiarPass">Introduza a nova contrasinal</string>
    <string name="cambiarPassC">Confirme a nova contrasinal</string>
    <string name="change">Cambiar contrasinal</string>
    <string name="modificarPuntuacion">Modificar puntuación</string>
    <string name="buscar">Buscar o meu usuario</string>
    <string name="cambiarC">¿Esqueciches o teu contrasinal?</string>
    <string name="cambiadaC">Contrasinal cambiada</string>
    <string name="modificarDescripcion">Modificar descrición</string>
    <string name="eliminar">Modificar esta reseña</string>
    <string name="modificarNomeU">Modificar nome de usuario</string>
    <string name="modificarContrasena">Modificar contrasinal</string>
    <string name="reactivar">¿Reactivar conta?</string>
    <string name="reactivarD">¿Desexa reactivar a súa conta de PRODRATER?</string>
    <string name="errorLogIn">A contrasinal ou o nome de usuario son incorrectos</string>
    <string name="modificarCorreo">Modificar correo</string>
    <string name="puntuacionResenas">Tipo de reseña</string>
    <string name="detallesR">Detalles da reseña</string>
    <string name="positiva">Positiva ou moi positiva</string>
    <string name="negativa">Negativa ou moi negativa</string>
    <string name="consultar">Buscar por puntuación media de produto</string>
    <string name="ver">Ver todas as reseñas</string>
    <string name="detallesU">Detalles do usuario</string>
    <string name="cantP">Cantidade de produtos</string>
    <string name="cantR">Cantidade de reseñas</string>
    <string name="modificarUsuario">Modificar o meu perfil</string>
    <string name="irUsuario">Ir ao meu perfil</string>
    <string name="DNIMal">O DNI ten que ser formato XXXXXXXXA</string>
    <string name="filtrar">Aplicar filtro</string>
    <string name="DNI">DNI</string>
    <string name="mod">Modificar</string>
    <string name="nD">Introduce nova descripción</string>
    <string name="nN">Introduce novo título</string>
    <string name="nP">Introduce nova puntuación</string>
    <string name="nombreP">Nome do produto</string>
    <string name="nContrasena">Introduce nova contrasinal</string>
    <string name="nDescripcion">Introduce nova descripcion</string>
    <string name="nNombreUser">Introduce novo nome de usuario</string>
    <string name="panel">Panel de reseñas-filtro por categoría de produto</string>
    <string name="panelProdutos">Panel de produtos-filtro por puntuacion de reseña</string>
    <string name="fotoDefecto">Seleccionar foto</string>
    <string name="problemas">Problemas na conexion co servidor. Tente de novo mais tarde</string>
    <string name="letra">Seleccione o tamaño da letra</string>
    <string name="pequeña">Letra pequena</string>
    <string name="grande">Letra grande</string>
    <string name="tp">O teu inventario</string>
    <string name="opcions">Modificar perfil</string>
    <string name="lista">Inventario</string>
    <string name="nombreCategoria">Nome da categoria</string>
    <string name="faceReseña">Facer unha reseña</string>
    <string name="eliminaR">Eliminar reseña</string>
    <string name="mp">Listar os meus produtos</string>
    <string name="mr">Listar as miñas reseñas</string>
    <string name="ipText">Cambia a dirección IP</string>
    <string name="detalles">Detalles do produto</string>
    <string name="descripcionResena">Descripcion da reseña</string>
    <string name="descripcionDoProducto">Descripcion do producto</string>
    <string name="errorObtencion">Non se atoparon datos con estas caracteristicas</string>
    <string name="precio">Precio do producto</string>
    <string name="ip">Introduza a dirección IP</string>
    <string name="aplicar">Aplicar esta IP</string>
    <string name="cuentaE">Eliminar conta</string>
    <string name="nonProductos">Non se atoparon produtos</string>
    <string name="nonResenas">Non se atoparon reseñas</string>
    <string name="cuenta">Dar de baixa ou eliminar conta</string>
    <string name="btnModificar">Modificar unha reseña</string>
    <string name="txtModificar">Escolla un produto a modificar</string>
    <string name="escogerEliminar">Escolla un produto</string>
    <string name="txtEliminar">Benvido ao menú de modificación de reseñas</string>
    <string name="credencialCorreo">Nome de usuario</string>
    <string name="credencialCotraseña">Contrasinal</string>
    <string name="errorVacios">Os campos non poden estar baleiros</string>
    <string name="cerrarSesion">Pechar sesión</string>
    <string name="cerrarSesionD">¿Seguro que queres pechar sesion?</string>
    <string name="txtRegistro">Introduza estes datos para rexistrarse</string>
    <string name="nombreEdit">Nome de usuario</string>
    <string name="apellidosEdit">Apelidos</string>
    <string name="mailEdit">Correo electrónico</string>
    <string name="contraseñaEdit">Contrasinal</string>
    <string name="confirm">Confirmar contrasinal</string>
    <string name="volverInicio">Volver ao inicio de sesión</string>
    <string name="errorMOD">Error durante la modificación</string>
    <string name="modR">Reseña modificada con éxtio</string>
    <string name="modU">Usuario modificado con éxito</string>
    <string name="noP">Non se atoparon produtos</string>
    <string name="nonR">Non se atoparon reseñas con estas características</string>
    <string name="nonRR">Non se atoparon reseñas</string>
    <string name="eliminarC">¿Eliminar conta?</string>
    <string name="eliminarD">Se eliminas a túa conta perderás todos os teus datos</string>
    <string name="registrarse">Rexistrarme</string>
    <string name="saludo">Benvido a PRORATER</string>
    <string name="volverMain">Volver ao menú principal</string>
    <string name="opciones">¿Que queres facer hoxe?</string>
    <string name="opcionesAlert">¿Que queres facer?</string>
    <string name="erroPuntuacion">O valor da puntuacion ten que ser un numero entero do un ao 10</string>
    <string name="errorCorreo">O correo ten que acabar en @gmail.com</string>
    <string name="errorContraseña">O contrasinal ten que ter maiúsculas, minúsculas, números e símbolos</string>
    <string name="coincidir">Os contrasinais teñen que coincidir</string>
    <string name="menuReseñas">Publique a súa reseña(5 reseñas máximo por produto)</string>
    <string name="botonPublicar">Publicar esta reseña</string>
    <string name="nomeReseña">Título da reseña</string>
    <string name="puntuacionReseña">Puntuación da reseña</string>
    <string name="descripcionReseña">Descrición da reseña</string>
    <string name="nombreU">Nome</string>
    <string name="apellidosU">Apelidos</string>
    <string name="puntuacion">Puntuación</string>
    <string name="emailU">Correo electrónico</string>
    <string name="DNIU">DNI</string>
    <string name="descripcionU">Sobre min</string>

</resources>