<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".changePass">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buscarNome"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/nombreV"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@id/guidelineH1" />

    <EditText
        android:id="@+id/nombreV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/credencialCorreo"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/searchN"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="251dp" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/cambiarPass"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/newPassConf"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/newPassConf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/cambiarPassC"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/newPass" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/atopado"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/newPass"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH3" />

    <Button
        android:id="@+id/changePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/cambiarC"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH4"
        app:layout_constraintVertical_bias="0.634" />

    <ImageButton
        android:id="@+id/backMainP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@id/changePass"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH4"
        app:layout_constraintVertical_bias="0.985"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="524dp" />

    <Button
        android:id="@+id/searchN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/nombreV" />
</androidx.constraintlayout.widget.ConstraintLayout>