<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".register">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinev1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinev2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/txtRegistro"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <EditText
        android:id="@+id/DNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/DNI"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/nameUser"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH3" />

    <EditText
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/nombreEdit"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lastNameUser"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/DNI" />

    <EditText
        android:id="@+id/mailUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/mailEdit"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordUser"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/lastNameUser" />

    <EditText
        android:id="@+id/lastNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/apellidosEdit"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/mailUser"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/nameUser" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineH5"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/passwordUser" />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/input_personalizado"
        android:ems="10"
        android:hint="@string/contraseñaEdit"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.80"
        app:layout_constraintStart_toStartOf="@id/guidelineV3"
        app:layout_constraintTop_toBottomOf="@+id/mailUser" />

    <Button
        android:id="@+id/goBackLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/volverInicio"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@id/rexistro" />

    <Button
        android:id="@+id/rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/registrarse"
        app:circularflow_radiusInDP="20dp"
        app:layout_constraintEnd_toEndOf="@id/guidelinev2"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="@id/guidelinev1"
        app:layout_constraintBottom_toTopOf="@id/goBackLogIn"
        app:layout_constraintTop_toBottomOf="@id/guidelineH5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="175dp" />

    <ImageView
        android:id="@+id/profileP"
        android:layout_width="136dp"
        android:layout_height="143dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/camara"
        app:layout_constraintEnd_toStartOf="@id/guidelineV3"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerImg"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/changeProfileP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/fotoDefecto"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@id/guidelineV3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/camara" />

    <ImageButton
        android:id="@+id/camara"
        android:layout_width="67dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/changeProfileP"
        app:layout_constraintEnd_toStartOf="@id/guidelineV3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@+id/profileP"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/insertar"
        android:layout_width="39dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@id/guidelineV3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH4"
        app:srcCompat="@android:drawable/ic_menu_upload" />

    <Spinner
        android:id="@+id/spinnerImg"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/profileP"
        app:layout_constraintEnd_toStartOf="@id/guidelineV3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/guidelinev1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH3"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>