<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".mainMenu">

    <Button
        android:id="@+id/eliminarResena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/consultar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/modificaResena" />

    <Button
        android:id="@+id/modificaResena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/ver"
        app:layout_constraintBottom_toTopOf="@+id/eliminarResena"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/subirResena" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLanguages" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opciones"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <Button
        android:id="@+id/subirResena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/subir"
        app:layout_constraintBottom_toTopOf="@+id/modificaResena"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH3" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/irUsuario"
        app:layout_constraintBottom_toTopOf="@id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH4"
        app:layout_constraintVertical_bias="0.722" />

    <ImageButton
        android:id="@+id/pechar"
        android:layout_width="50dp"
        android:layout_height="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.20"
        app:srcCompat="@drawable/free_sign_out_icon_3300_thumb" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cerrarSesion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pechar"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/spinnerLanguages"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@id/guidelineH1" />

    <ImageButton
        android:id="@+id/ajustes"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toEndOf="@id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@id/guidelineH2"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/efewf_removebg_preview" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />
</androidx.constraintlayout.widget.ConstraintLayout>